<resources>
    <string name="app_name">Simple Cycle</string>
    <string name="title_home">Info</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_statistic">Statistic</string>
    <string name="previous_month">previous month</string>
    <string name="today">today</string>
    <string name="next_month">next month</string>
    <string name="start_new_cycle">start new cycle</string>
    <string name="no_description">no description</string>
    <string name="days_on_home">Days on Home</string>
    <string name="years_in_statistic">Years in Statistic</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="import_csv_statistic">Import CSV Statistic</string>
    <string name="choose_csv_file">Choose a CSV file</string>
    <string name="import_statistic">Import Statistic</string>
    <string name="import_description">You can import old Statistic from CSV file</string>
    <string name="ok">OK</string>
    <string name="delete_statistic_item">Delete statistic item</string>
    <string name="are_you_sure_to_delete_statistic">Are you sure to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_phases">Phases</string>
    <string name="phase_from">Day %d</string>
    <string name="phase_to">to %d</string>
    <string name="no_start_date_set"><br>No start date set.\nSet date bellow or go to statistic tab and import you statistic data.</br></string>
    <string name="delete_phase_item">Delete phase</string>
    <string name="are_you_sure_to_delete_phase">Are you sure to delete this phase?</string>
    <string name="edit_phase">Edit phase</string>
    <string name="add_new_phase">add new phase</string>
    <string name="phase_description_placeholder">phase description</string>
    <string name="no_statistic_data"><br>No data exist.\n\nEnter the last cycle start date in the "calendar" or import data from CSV by Import-Button.</br></string>
    <string name="load_predefined_phases">load predefined phases</string>
    <string name="no_custom_phases_set">no custom phases set</string>
    <string name="are_you_sure_to_load_predefined_phases">are you sure to load predefined phases. all your changes will be lost</string>
    <string name="appwidget_title">Cycle day %d</string>
    <string name="appwidget_description">Day phase description</string>
    <string name="appwidget_title_nodata">Cycle not started</string>
    <string name="appwidget_description_nodata">no description</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Show daily cycle phase description</string>
    <string name="save">Save</string>
    <string name="start_date_of_last_cycle">start date of last cycle</string>
    <string name="average_cycle_length">average cycle length</string>
    <string name="average_cycle_length_statistic">Average cycle length of last 12 months: %1$d</string>
    <string name="set">Set</string>
    <string name="no_date_set_date_placeholder">no date set</string>
    <string name="no_length_set_placeholder">no length set</string>
    <string name="mark_whole_phase">mark whole phase in calendar</string>
    <string name="mark_only_phase_start">mark only start of phase in calendar</string>
    <string name="set_next_cycle_start">Set start of next cycle</string>
    <string name="color_current">Color current cycle</string>
    <string name="color_prediction">Color for prediction</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="description">Description</string>
    <string name="remove_color">remove color</string>
    <string name="edit_average_cycle_length">Edit average cycle length</string>
    <string name="show_on_start">Show on start</string>
    <string name="different_color_for_prediction">different color for prediction</string>
    <string name="on_click_colorbox">To change color click on edit button</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="help_statistic">
        <br>You can remove a statistic item by touch it multiple times.
        </br>
    </string>
</resources>