<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_baseline_calendar_black"
        android:title="@string/title_calendar"
        />

    <item
        android:id="@+id/navigation_statistic"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        android:title="@string/title_statistic"
        />

    <item
        android:id="@+id/navigation_phases"
        android:icon="@drawable/ic_baseline_autorenew_24"
        android:title="@string/title_phases"
        />
</menu>