<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_info">

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.kontranik.easycycle.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.kontranik.easycycle.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.kontranik.easycycle.ui.statistic.StatisticFragment"
        android:label="@string/title_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/navigation_phases"
        android:name="com.kontranik.easycycle.ui.phases.PhasesFragment"
        android:label="@string/title_phases"
        tools:layout="@layout/fragment_phases" />
    <fragment
        android:id="@+id/editPhaseFragment"
        android:name="com.kontranik.easycycle.ui.phases.editphase.EditPhaseDialogFragment"
        android:label="EditPhaseFragment" />
</navigation>