<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar.CalendarFragment"
    android:background="?attr/colorOnMainBackground"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16sp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_corners"
                    android:padding="16sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8sp"
                    >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                <ImageButton
                    android:id="@+id/ib_prev_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_chevron_left_24"
                    android:backgroundTint="?attr/colorPrimary"
                    android:contentDescription="@string/previous_month"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                    <TextView
                        android:id="@+id/tv_title_calendar"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:text="Dec 2021"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ib_calendar_today"
                        app:layout_constraintStart_toEndOf="@+id/ib_prev_month" />

                    <ImageButton
                        android:id="@+id/ib_calendar_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/today"
                        android:src="@drawable/ic_baseline_calendar_today_24"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ib_next_month"
                        android:backgroundTint="?attr/colorPrimary"
                        />
                    <TextView
                        android:id="@+id/tv_calendar_todaytext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22"
                        android:textSize="11sp"
                        android:paddingTop="5sp"
                        android:textColor="?attr/colorOnPrimary"
                        app:layout_constraintTop_toTopOf="@id/ib_calendar_today"
                        app:layout_constraintStart_toStartOf="@id/ib_calendar_today"
                        app:layout_constraintEnd_toEndOf="@id/ib_calendar_today"
                        app:layout_constraintBottom_toBottomOf="@id/ib_calendar_today"
                        />

                    <ImageButton
                        android:id="@+id/ib_next_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/next_month"
                        android:src="@drawable/ic_baseline_chevron_right_24"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:backgroundTint="?attr/colorPrimary"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TableLayout
                    android:id="@+id/table_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                 />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16sp"
                    android:layout_marginBottom="8sp"
                    android:background="@drawable/rounded_corners"
                    android:orientation="vertical"
                    android:padding="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_calendar"
                    >

                    <LinearLayout
                        android:id="@+id/ll_calendar_infocard_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_calendar_infocard_title_badge"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="22"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_calendar_infocard_title_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:gravity="center"
                            android:text="28. Dez 2021"
                            style="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold"
                            />

                        <ImageButton
                            android:id="@+id/ib_caledar_infocard_addStartDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_add_circle_24"
                            android:backgroundTint="?attr/colorPrimary"
                            android:contentDescription="@string/start_new_cycle" />

                    </LinearLayout>
                    <View
                        android:id="@+id/divider_calendar_infocard"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />
                    <TextView
                        android:id="@+id/tv_calendar_infocard_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_description"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ll_calendar_infocard_title" />
                </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>